LM CSS, fix alignment, see: #32928

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -6753,7 +6753,7 @@ select[multiple].input-lg {
   background-color: #ddd;
 }
 .navbar-default .navbar-toggle .icon-bar {
-  background-color: #888;
+  background-color: #4c6586;
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
